# radiance-cascades-demo

./: .gitattributes  AGENTS.md  README.md
3d/: AI_Task.md  CMakeLists.txt  IMPLEMENTATION_SUMMARY_QUICKSTART.md  README.md  add_obj_function.py  build.ps1  fix_sdf3d.py  fix_shaders.py  refactor_plan.md  replace_destroy.py  replace_initialize.py
3d/.claude/: settings.local.json
3d/doc/1/: BUILD_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_TO_3D.md  QUICKSTART.md  SHADER_REORGANIZATION.md
3d/doc/2/: AI_Task.md  AI_Task_error_fix.md  AI_Task_error_fix_summary.md  AI_Task_error_phase0.md  PHASE0_SUCCESS.md  brainstorm_plan.md  error_fix_imgui_assertion.md  error_fix_linker_analytic_sdf.md  error_fix_sdf_debug_not_visible.md  error_fix_shader_loading.md  error_fix_volume_vars.md  human.skill  implementation_status.md  phase0_progress.md  phase1_progress.md  phase_plan.md  sdf_debug_visualization.md  task_completion_summary.md
3d/doc/2/phase0/: phase0_completion_report.md
3d/doc/2/phase1/: phase1_debug_status.md
3d/doc/2/phase1.5/: CASCADE_INITIALIZATION.md  COMPILATION_FIX_SUMMARY.md  CORNELL_BOX_SCENE_GUIDE.md  CREATION_SUMMARY.md  DEBUG_VERTEX_SHADERS.md  FAST_ITERATION_LEARNINGS.md  GUI_CONFLICT_RESOLUTION.md  IMPLEMENTATION_CHECKLIST.md  LESSONS_LEARNED.md  MATERIAL_SYSTEM_ENHANCEMENT.md  OBJ_MESH_LOADING.md  PHASE1.5_COMPLETION_STATUS.md  PHASE1_CONSOLIDATION.md  QUICK_START.md  QUICK_START_GUI_ENHANCEMENT.md  README.md  SDF_NORMAL_VISUALIZATION.md  SHADER_COMPATIBILITY_FIX.md
3d/doc/3/cluade_plan/: cascade_c0res_slider_impl_learnings.md  phase2_5_multi_cascade_learnings.md  phase2_debug_plan.md  phase4b_plan.md  phase4c_plan.md  phase5_banding_analysis.md  phase5_plan.md  phase5d_impl_learnings.md  phase5d_logic_check.md  phase5d_trilinear_plan.md  phase5i_impl_learnings.md  reflection_2026-04-26.md
3d/doc/3/codex_plan/: 01_decision.md  03_execution_order.md
3d/doc/3/codex_plan_critic/: DECISION_SUMMARY.md  QUICK_COMPARISON.md  plan_comparison_and_recommendation.md
3d/doc/3/codex_plan_critic_critic/: 01_response.md  03_best_strategy_now.md  04_concrete_next_week.md  README.md
3d/doc/4/claude_plan/: sponza_sdf_impl_plan.md  sponza_sdf_impl_plan_v2.md  sponza_sdf_step0_impl.md  sponza_sdf_step1_impl.md  sponza_sdf_step2_impl.md  sponza_sdf_step2_plan.md  sponza_sdf_step3_impl.md  sponza_sdf_step3_plan.md  sponza_sdf_step4_impl.md  sponza_sdf_step4_plan.md  sponza_sdf_step5_impl.md  sponza_sdf_step5_plan.md  sponza_sdf_step6_impl.md  sponza_sdf_step7_impl.md
3d/doc/5/claude_plan/: cam.md  camera_gi_diagnostic_step10_impl.md  camera_gi_diagnostic_step10_plan.md  gi_bake_strip_heatmap_step11_impl.md  gi_bake_strip_heatmap_step11_plan.md  gi_pass_1080p_perf_analysis_plan.md  gi_pass_scaling_experiment_plan.md  gpu_sdf_step8_impl.md  gpu_sdf_step8_plan.md  load_path_step9_impl.md  load_path_step9_plan.md  step9_followups_impl.md  zero_init_cascade_textures_step11_followup_plan.md
3d/doc/cluade_plan/: PLAN.md  architecture_overview.md  phase1_revision.md  phase2_5_ABD_plan.md  phase2_5_completion_learnings.md  phase2_5_ui_fixes.md  phase2_changes.md  phase2_debug_learnings.md  phase3.X_shadertoy_gap_analysis.md  phase3_5_conclusion.md  phase3_5_self_critique.md  phase3_completion_learnings.md  phase3_spec.md  phase4_plan.md  phase4a_progress.md  phase4b-1_debug_learnings.md  phase4b_impl_learnings.md  phase4c_impl_learnings.md  phase4d_plan.md  phase4e_plan.md  phase5_debug_impl_learnings.md  phase5_gap_analysis_brainstorm.md  phase5a_impl_learnings.md  phase5bc_impl_learnings.md  phase5d_impl_learnings.md  phase5d_logic_check.md  phase5e_impl_learnings.md  phase5f_impl_learnings.md  phase5g_directional_sampling_plan.md  phase5g_impl_learnings.md  phase5h_impl_learnings.md  phase5h_shadow_ray_plan.md
3d/doc/cluade_plan/AI/: README.md  phase11_jitter_dirres_fixes.md  phase12b_burst_capture_impl.md  phase12b_burst_capture_plan.md  phase13_quality_lift_plan.md  phase14b_c0_coverage_analysis.md  phase6a_screenshot_ai_plan.md  phase6b_pipeline_learning.md  phase6b_renderdoc_ai_plan.md  phase7_banding_fix_plan.md  phase7_findings_summary.md  phase7b_anti_banding_revised_plan.md  phase8_debug_mode_insights.md  phase8_findings_log.md  phase8_gi_banding_plan.md  phase8_screenshot_analysis.md  phase9_impl_detail.md  phase9_improvement_plan.md  phase9b_history_clamp.md  phase9b_impl_detail.md
3d/doc/cluade_plan/class/: 00_jargon_index.md  01_scene_and_pipeline.md  02_probes_and_cascades.md  05_phase5b_atlas.md  06_phase5c_directional_merge.md  07_phase5d_probe_layout.md  08_phase5e_direction_scaling.md  09_phase5f_bilinear.md  10_c0_resolution_and_configuration.md  12_phase5g_directional_gi.md  13_phase5i_soft_shadow.md  17_phase12_capture.md  18_phase14_range_scaling.md  README.md
3d/doc/cluade_plan/codex_critic/: 01_completion_audit.md  05_revised_position.md
3d/doc/cluade_plan/codex_critic_phase123/: 03_recommendation.md
3d/doc/cluade_plan/codex_critic_phase4+/: 01_findings.md  README.md
3d/doc/codex_plan/: 02_scope_cut.md  04_file_targets.md  05_done_definition.md  README.md
3d/doc/codex_plan/class/: README.md  (+13 more)
3d/doc/codex_plan_critic/: ACTION_PLAN.md  EXECUTIVE_SUMMARY.md  README.md
3d/doc/codex_plan_critic_critic/: 02_where_i_agree_and_correct.md
3d/include/: gl_helpers.h
3d/res/scene/: README.md
3d/res/shaders/: gi_blur.frag  gi_blur.vert  inject_radiance.comp  lighting_debug.frag  lighting_debug.vert  radiance_3d.comp  radiance_debug.frag  radiance_debug.vert  raymarch.frag  reduction_3d.comp  sdf_3d.comp  sdf_analytic.comp  sdf_debug.frag  sdf_debug.vert  temporal_blend.comp  voxelize.comp
3d/shader_toy/: Common.glsl  Image.glsl  Radiance Cascades 3D.mhtml
3d/src/: analytic_sdf.cpp  analytic_sdf.h  config.h.in  demo3d.cpp  demo3d.h  gl_helpers.cpp  main3d.cpp  obj_loader.h  rdoc_helper.cpp  rdoc_helper.h
3d/tools/: .env.example  analyze_renderdoc.py  analyze_screenshot.py  debug_temporal.py  frame_17775455579415942.md  rdoc_extract.py  rdoc_frame_capture_pipeline.md
3d/tools/codex_critic/: 01_frame_17775455579415942_review.md
(+266 files in other folders)
